# tiny-retro-racer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  desktop-builds.yml  reviewgate.yml
assets/: app-icon.icns
docs/: first-playable-checklist.md  game-design.md  release-builds.md  research-notes.md
scripts/: generate-macos-icon.py  package-macos-app.sh
src/: driving.rs  lib.rs  main.rs  perspective.rs  pixel_art.rs  track.rs
