[package]
name = "tiny-retro-racer"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
description = "A kid-friendly retro arcade racing game built with Rust and Bevy."

[dependencies]
bevy = "0.19"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

