[package]
name = "tiny-retro-racer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A kid-friendly retro arcade racing game built with Rust and Bevy."

[features]
default = ["game"]
game = ["dep:bevy"]

[dependencies]
bevy = { version = "0.19.0", optional = true }

[[bin]]
name = "tiny-retro-racer"
path = "src/main.rs"
required-features = ["game"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
